# ML-study

./: .gitignore  pyproject.toml
ml/sentence_generator/: model.py
nlp/: loader.py  prep.py  transformer.ipynb
