[tool.poetry]
name = "ml-study"
version = "0.1.0"
description = ""
authors = ["Ryuta-Yamamoto"]

[tool.poetry.dependencies]
python = "^3.7"
mecab-python3 = "^1.0.0"
pandas = "^1.0.5"
numpy = "^1.19.0"
tensorflow = "^2.2.0"
torch = "^1.5.1"
torchvision = "^0.6.1"
scikit-learn = "^0.23.1"
ipykernel = "^5.3.0"
torchtext = "^0.6.0"
spacy = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
