[tool.poetry]
name = "ml-study"
version = "0.1.0"
description = ""
authors = ["Ryuta-Yamamoto"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^0.25.3"
scikit-learn = "^0.23.2"
torch = "^1.6.0"
tensorflow = "^2.3.1"
requests = "^2.24.0"
requests-html = "^0.10.0"
mecab-python3 = "^1.0.2"
unidic-lite = "^1.0.7"
google-cloud-bigquery = "^2.2.0"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
ipykernel = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
